# TMOscrapper

./: .gitignore  CMakeLists.txt  README.md  cbzcreator.cpp  downloader.py  parse.cpp
.cache/clangd/index/: parse.cpp.6140905A62AB577B.idx
src/: Curl.hpp  MangaData.cpp  MangaData.hpp  MyApi.cpp  MyApi.hpp  Serializator.hpp  Tools.cpp  Tools.hpp  main.cpp
